
0.9.9f Jan 06, 2005
 * fixed bug in gen_short_pkg_description with installed packages that are
   missing a description, triggered by the new --search functionality looking
   at installed packages
 * added Vietnamese translation by vu nguyen (vncasper at yahoo dot com)
 * changed longopts and switch cases to use macros for the command line
   argument parsing
 * fixed bug (in -current with glibc 3.3.3) by adding a missing {0, 0, 0, 0}
   where unknown option to getopt_long_only caused segfaults
 * added cast to fix strpbrk() void pointer arith warning with gcc-3.4
 * updated FAQ
 * added alsa.* to default exclude
 * produce warning if slack-require information is too long
 * updated setlocale() call to set category to LC_ALL, thanks Piotr Simon
 * updated documentation

0.9.9e Dec 07, 2004
 * disabled default header of "Pragma: no-cache" for users behind web proxy
 * fixed pt_PT translation, missing \n
 * --upgrade now checks to see if there is multiple installed packages and
   uses the newest one
 * rewrote pkg_action_search()
 * --show now shows installed pkgs
 * get_installed_pkgs() now parses out the packages description as well
 * make --search show installed packages that aren't present in available
   package list from current sources
 * updated typedefs
 * renamed transaction to transaction_t for clarity
 * fixed bug in add_deps_to_trans() where check for exclude was catching
   on installed packages.  installed always satisfies dependency, even if
   excluded (which should only mean excluded from upgrading).
 * install make target now strips binary
 * added pt_PT translation by Miguel Santinho
 * updated documentation

0.9.9d Nov 19, 2004
 * added FAQ: 48. How can I search the contents of a package for a file or library?
 * added czech translation by Oto Petrik
 * made head_mirror_data clear_head_cache write_head_cache read_head_cache
   gen_filename_from_url gen_head_cache_filename get_md5sum non static
 * moved str_replace_chr to common.[ch]