@@ -164,6 +164,15 @@ Frequenty Asked Questions:
    ### then, let slapt-get upgrade the rest
    $ slapt-get --dist-upgrade
 
+   ### or you can specify --remove-obsolete to remove
+   ### all depreciated packages.  CAUTION: this can only
+   ### take into consideration packages that are available
+   ### from your current sources.  Thus self made packages
+   ### will be considered obsolete as well.  Only use this
+   ### if you have been using Slackware packages exclusively.
+   ### You can also use this option for information purposes.
+   $ slapt-get --dist-upgrade --remove-obsolete
+
  Then follow the rest of the directions in UPGRADE.TXT.
 
    * Note: you might be able to get away with just doing a --dist-upgrade after
@@ -176,7 +185,7 @@ Frequenty Asked Questions:
  specify slapt-get to install a disk set like so:
 
    ### install all gnome and X packages
-   $ slapt-get --search './slackware/gnome|./slackware/x'|awk '{print $1}'| \
+   $ slapt-get --search '^./slackware/gnome$|^./slackware/x$'|awk '{print $1}'| \
      xargs -r slapt-get --install
 
  Do the same for all your installed disk sets, such as gnome, x, xap, l, n, etc.
@@ -602,7 +611,8 @@ Frequenty Asked Questions:
 
 28. I am tracking current, how do I keep the base disk set up to date?
 
- If you are tracking current, --dist-upgrade may be more useful than --upgrade.
+ If you are tracking current, --dist-upgrade is more appropriate than
+ --upgrade.
 
  Even if you aren't intentionally switching to a newer distribution,
  --dist-upgrade will ensure that the base set is always present while at the
@@ -611,6 +621,12 @@ Frequenty Asked Questions:
  --dist-upgrade --reinstall can also be useful when some packages in the base
  disk set change versions (cxxlibs and sed come to mind).  This will reinstall
  those base packages that may have lesser version numbers.
+
+ --dist-upgrade --remove-obsolete will remove any packages that Pat has removed
+ from current.  CAUTION: this can only take into consideration packages that
+ are available from your current sources.  Thus self made packages will be
+ considered obsolete as well.  Only use this if you have been using Slackware
+ packages exclusively.  You can also use this option for information purposes.
 
 
 29. How would I script an ldd dependency hack with slapt-get?
@@ -845,25 +861,9 @@ Frequenty Asked Questions:
  If you are tracking current or are dist-upgrading to a new release, you will
  encounter packages that you have installed that are no longer required or
  part of the basic slackware install.  If you only have the official slackware
- package sources in your slapt-getrc file, then you can use the following
- as either a command or a script to remove those obsoleted packages:
+ package sources in your slapt-getrc file, then you can do the following:
 
-  for pkg in `slapt-get --installed|awk '{print $1}'`;do if [ -z "`slapt-get --search ${pkg}`" ]; then slapt-get --remove ${pkg};fi;done
-
- or as a script:
-
-  #!/bin/sh
-  # this script uses slapt-get to remove obsoleted packages
-  # slapt-getrc must only have official package sources for the
-  # current release you are tracking
-  for pkg in `./slapt-get --installed|awk '{print $1}'`
-  do
-	  if [ -z "`./slapt-get --search ${pkg}`" ]
-	  then
-		  echo ./slapt-get --remove ${pkg}
-	  fi
-  done
-
+  # slapt-get --dist-upgrade --remove-obsolete
 
 
 41. What provisions have you made for dialup users?
